; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_fs/extr_dag.c_svn_fs_fs__dag_serialize.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_fs/extr_dag.c_svn_fs_fs__dag_serialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32*, i32, i32, i64 }
%struct.TYPE_6__ = type { i32, i8* }

@SVN_TEMP_SERIALIZER__OVERHEAD = common dso_local global i64 0, align 8
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_fs__dag_serialize(i8** %0, i32* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca %struct.TYPE_6__*, align 8
  %11 = alloca i32*, align 8
  store i8** %0, i8*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = bitcast i8* %12 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %13, %struct.TYPE_7__** %9, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %15 = load i64, i64* @SVN_TEMP_SERIALIZER__OVERHEAD, align 8
  %16 = sub nsw i64 1024, %15
  %17 = load i32*, i32** %8, align 8
  %18 = call i32* @svn_temp_serializer__init(%struct.TYPE_7__* %14, i32 32, i64 %16, i32* %17)
  store i32* %18, i32** %11, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 4
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %32

23:                                               ; preds = %4
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %25 = call i32 @svn_fs_fs__dag_check_mutable(%struct.TYPE_7__* %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %32, label %27

27:                                               ; preds = %23
  %28 = load i32*, i32** %11, align 8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 4
  %31 = call i32 @svn_fs_fs__noderev_serialize(i32* %28, i64* %30)
  br label %38

32:                                               ; preds = %23, %4
  %33 = load i32*, i32** %11, align 8
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 4
  %36 = bitcast i64* %35 to i8**
  %37 = call i32 @svn_temp_serializer__set_null(i32* %33, i8** %36)
  br label %38

38:                                               ; preds = %32, %27
  %39 = load i32*, i32** %11, align 8
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %40, i32 0, i32 3
  %42 = bitcast i32* %41 to i8**
  %43 = call i32 @svn_temp_serializer__set_null(i32* %39, i8** %42)
  %44 = load i32*, i32** %11, align 8
  %45 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %46 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %45, i32 0, i32 2
  %47 = bitcast i32* %46 to i32**
  %48 = call i32 @svn_fs_fs__id_serialize(i32* %44, i32** %47)
  %49 = load i32*, i32** %11, align 8
  %50 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %51 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %50, i32 0, i32 1
  %52 = call i32 @svn_fs_fs__id_serialize(i32* %49, i32** %51)
  %53 = load i32*, i32** %11, align 8
  %54 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %55 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %54, i32 0, i32 0
  %56 = call i32 @svn_temp_serializer__add_string(i32* %53, i32* %55)
  %57 = load i32*, i32** %11, align 8
  %58 = call %struct.TYPE_6__* @svn_temp_serializer__get(i32* %57)
  store %struct.TYPE_6__* %58, %struct.TYPE_6__** %10, align 8
  %59 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %60 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %59, i32 0, i32 1
  %61 = load i8*, i8** %60, align 8
  %62 = load i8**, i8*** %5, align 8
  store i8* %61, i8** %62, align 8
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %64 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %63, i32 0, i32 0
  %65 = load i32, i32* %64, align 8
  %66 = load i32*, i32** %6, align 8
  store i32 %65, i32* %66, align 4
  %67 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %67
}

declare dso_local i32* @svn_temp_serializer__init(%struct.TYPE_7__*, i32, i64, i32*) #1

declare dso_local i32 @svn_fs_fs__dag_check_mutable(%struct.TYPE_7__*) #1

declare dso_local i32 @svn_fs_fs__noderev_serialize(i32*, i64*) #1

declare dso_local i32 @svn_temp_serializer__set_null(i32*, i8**) #1

declare dso_local i32 @svn_fs_fs__id_serialize(i32*, i32**) #1

declare dso_local i32 @svn_temp_serializer__add_string(i32*, i32*) #1

declare dso_local %struct.TYPE_6__* @svn_temp_serializer__get(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
